; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execExpr.c_ExecPrepareCheck.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execExpr.c_ExecPrepareCheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ExecPrepareCheck(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @MemoryContextSwitchTo(i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @expression_planner(i32* %11)
  %13 = inttoptr i64 %12 to i32*
  store i32* %13, i32** %3, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32* @ExecInitCheck(i32* %14, i32* null)
  store i32* %15, i32** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @MemoryContextSwitchTo(i32 %16)
  %18 = load i32*, i32** %5, align 8
  ret i32* %18
}

declare dso_local i32 @MemoryContextSwitchTo(i32) #1

declare dso_local i64 @expression_planner(i32*) #1

declare dso_local i32* @ExecInitCheck(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
